added colors to my text

--- a/index.html
+++ b/index.html
@@ -24,5 +24,12 @@
         <td>Ronaldo</td>
       </tr>
     </table>
+    <div class="first">
+      <p class="second"> Inside first div</p>
+    </div>
+    <div class="second">
+     <p>Inside second div</p>
+    </div>
+    <p class="second"> Out of Divs</p>
   </body>
 </html>
